--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>kdjada</title>
+    <title>ZobuārstuWeb</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
   <body>
-    <p>Hello World! And bye!</p>
     <h1>Hello!</h1>
   </body>
 </html>
